--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "laravel-react-modular-stack",
+  "name": "laravel-product-inventory-management",
   "description": "All scripts are executed with `bun`, not `npm`, `yarn` or `pnpm`. (bun run <script>).",
   "private": true,
   "author": {
@@ -17,22 +17,21 @@
     "i:all": "bun i && bun run i:be && bun run i:fe",
     "dev": "concurrently --handle-input --kill-others-on-fail --success=last -c \"#93c5fd,#c4b5fd,#fdba74\" \"bun run dev:be\" \"bun run queue:listen\" \"bun run dev:fe\" --names='SERVER,QUEUE,CLIENT'",
     "quick-install": "bun scripts/quick-install.ts",
-    "build:installer": "bun build ./scripts/quick-install.ts --compile --outfile dist/quick-install.exe",
+    "env:check": "powershell -NoProfile -ExecutionPolicy Bypass -File ./scripts/ps/env-check.ps1",
+    "scout:reindex": "powershell -NoProfile -ExecutionPolicy Bypass -File ./scripts/ps/scout-reindex.ps1",
+    "scout:reindex:product": "powershell -NoProfile -ExecutionPolicy Bypass -File ./scripts/ps/scout-reindex.ps1 -Model 'App\\Models\\Product'",
     "// BACKEND (LOCAL)": "---------------------------------------------------",
     "local": "dotenv -e .env.local -- php backend/artisan",
-    " ↓ ": "# Ejecuta cualquier comando de `php artisan` dentro de `backend`",
     "artisan": "bun run local",
     "i:be": "cd backend && composer install",
     "dev:be": "bun run ziggy && bun run local serve --host=localhost --port=8080",
     "queue:listen": "bun run local queue:listen --queue=default --sleep=1 --timeout=120 --memory=256 --tries=1",
-    "db:create": "bun run local db:create",
+    "db:create": "powershell -NoProfile -ExecutionPolicy Bypass -File ./scripts/ps/sqlitedb-create.ps1",
     "migrate": "bun run local migrate",
     "migrate:fresh": "bun run local migrate:fresh",
     "migrate:fresh:seed": "bun run local migrate:fresh --seed --force --no-interaction",
     "seed": "bun run local db:seed",
-    "logs:tail": "bun run local pail --ansi",
     "logs:tail:file": "powershell -NoProfile -Command Get-Content -Path backend\\\\storage\\\\logs\\\\laravel.log -Wait -Tail 200",
-    "env:check": "powershell -NoProfile -ExecutionPolicy Bypass -File ./scripts/ps/env-check.ps1",
     "seed:users": "bun run seed --class=Database\\\\Seeders\\\\SystemUsersSeeder",
     "dump": "cd backend && composer dump-autoload",
     "clear:all": "bun run local cache:clear && bun run local config:clear && bun run local event:clear && bun run local optimize:clear && bun run local route:clear && bun run local view:clear && cd backend && composer dump-autoload -o",
@@ -48,9 +47,7 @@
     "// DOCKER": "------------------------------------------------------------",
     "dk": "docker-compose --env-file .env.docker",
     "dk:start": "concurrently -c \"#84cc16,#3b82f6\" \"bun run dk:up:foreground\" \"bun run dev:fe:docker\" --names='DOCKER,CLIENT'",
-    " ↓↓ ": "# Inicia el servidor de Vite en el HOST, pero usando las variables de .env.docker para que se conecte a la URL correcta.",
     "dev:fe:docker": "dotenv -e .env.docker -- bun --cwd ./frontend dev",
-    " ↓↓↓ ": "# Inicia los contenedores en primer plano para ver los logs en la misma terminal que dk:dev.",
     "dk:up:foreground": "bun run dk up --remove-orphans",
     "dk:up": "bun run dk up -d",
     "dk:build": "bun run dk build",
@@ -58,7 +55,7 @@
     "dk:logs": "bun run dk logs -f",
     "dk:artisan": "bun run dk exec backend php artisan",
     "dk:sh": "bun run dk exec backend sh",
-    "dk:seed:users": "bun run dk run --rm -v ./.env.users:/var/www/backend/.env.users backend php artisan db:seed --class=SystemUsersSeeder",
+    "dk:seed:users": "bun run dk run --rm -v ./.env.users:/var/www/.env.users backend php artisan db:seed --class=SystemUsersSeeder",
     "// POSTGRESQL (LOCAL)": "-----------------------------------------------",
     "pg": "dotenv -e .env.pg.local -- php backend/artisan",
     "pg:dev": "concurrently --handle-input --kill-others-on-fail --success=last -c \"#93c5fd,#c4b5fd,#fdba74\" \"bun run pg:dev:be\" \"bun run pg:queue:listen\" \"bun run dev:fe\" --names='SERVER,QUEUE,CLIENT'",
@@ -69,7 +66,6 @@
     "pg:migrate:fresh": "bun run pg migrate:fresh",
     "pg:migrate:fresh:seed": "bun run pg migrate:fresh --seed --force --no-interaction",
     "pg:seed": "bun run pg db:seed",
-    "pg:logs:tail": "bun run pg pail --ansi",
     "pg:logs:tail:file": "powershell -NoProfile -Command Get-Content -Path backend\\\\storage\\\\logs\\\\laravel.log -Wait -Tail 200",
     "pg:ziggy": "bun run pg ziggy:generate ../frontend/src/ziggy.js",
     "pg:tinker": "bun run pg tinker"
