--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "laravel-react-modular-stack-frontend",
+  "name": "laravel-pim-frontend",
   "private": true,
   "type": "module",
   "scripts": {
@@ -13,77 +13,69 @@
     "types": "tsc --noEmit"
   },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
-    "@types/node": "^22.15.32",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@types/ziggy-js": "^1.8.0",
-    "eslint": "^9.29.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-import-resolver-typescript": "^4.4.3",
-    "eslint-plugin-import": "^2.31.0",
+    "@eslint/js": "^9.39.0",
+    "@types/node": "^24.9.2",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "eslint": "^9.39.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-sonarjs": "^3.0.3",
-    "eslint-plugin-unicorn": "^59.0.1",
-    "prettier": "^3.5.3",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.13",
-    "typescript-eslint": "^8.34.1"
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-sonarjs": "^3.0.5",
+    "eslint-plugin-unicorn": "^62.0.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "typescript-eslint": "^8.46.2"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.4",
-    "@inertiajs/inertia": "^0.11.1",
-    "@inertiajs/react": "^2.0.12",
-    "@radix-ui/react-accordion": "^1.2.11",
-    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@inertiajs/react": "^2.2.15",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-collapsible": "^1.1.11",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-navigation-menu": "^1.2.13",
-    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-radio-group": "^1.3.7",
-    "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@radix-ui/react-toast": "^1.2.14",
-    "@radix-ui/react-toggle": "^1.1.9",
-    "@radix-ui/react-toggle-group": "^1.1.10",
-    "@radix-ui/react-tooltip": "^1.2.7",
-    "@rjsf/core": "^5.24.12",
-    "@rjsf/validator-ajv8": "^5.24.12",
-    "@tailwindcss/vite": "^4.1.10",
-    "@tanstack/react-form": "^1.12.3",
-    "@tanstack/react-query": "^5.80.10",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tailwindcss/vite": "^4.1.16",
+    "@tanstack/react-form": "^1.23.8",
+    "@tanstack/react-query": "^5.90.6",
     "@tanstack/react-table": "^8.21.3",
-    "@vitejs/plugin-react": "^4.5.2",
+    "@vitejs/plugin-react": "^5.1.0",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
-    "date-fns-tz": "^3.2.0",
-    "globals": "^15.15.0",
-    "laravel-vite-plugin": "^1.3.0",
-    "lucide-react": "^0.475.0",
-    "motion": "^12.19.2",
-    "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-day-picker": "8.10.1",
-    "react-dom": "^19.1.0",
-    "react-query": "^3.39.3",
-    "sonner": "^2.0.5",
+    "globals": "^16.5.0",
+    "laravel-vite-plugin": "^2.0.1",
+    "lucide-react": "^0.552.0",
+    "motion": "^12.23.24",
+    "react": "^19.2.0",
+    "react-day-picker": "9.11.1",
+    "react-dom": "^19.2.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.10",
+    "tailwindcss": "^4.1.16",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5",
-    "ziggy-js": "^2.5.3"
+    "typescript": "^5.9.3",
+    "vite": "^7.1.12",
+    "ziggy-js": "^2.6.0"
   }
 }
