--- a/backend/composer.json
+++ b/backend/composer.json
@@ -16,21 +16,23 @@
     "spatie/laravel-activitylog": "^4.10.2",
     "spatie/laravel-data": "^4.17.1",
     "spatie/laravel-permission": "^6.21",
+    "symfony/http-client": "*",
     "tightenco/ziggy": "^2.6",
     "typesense/typesense-php": "^5.1"
   },
   "require-dev": {
-    "fakerphp/faker": "^1.24.1",
     "driftingly/rector-laravel": "^2.0.7",
+    "fakerphp/faker": "^1.24.1",
+    "larastan/larastan": "^3.7",
     "laravel/boost": "^1.2.1",
     "laravel/pail": "^1.2.3",
     "laravel/pint": "^1.25.1",
     "laravel/telescope": "^5.13",
     "mockery/mockery": "^1.6.12",
     "nunomaduro/collision": "^8.8.2",
+    "nunomaduro/phpinsights": "*",
     "pestphp/pest": "^4.1.2",
     "phpstan/phpstan": "^2.1",
-    "larastan/larastan": "^3.7",
     "rector/rector": "^2.1"
   },
   "autoload": {
@@ -85,6 +87,7 @@
     "preferred-install": "dist",
     "sort-packages": true,
     "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true,
       "pestphp/pest-plugin": true,
       "php-http/discovery": true,
       "wikimedia/composer-merge-plugin": true
